@@ -8,6 +8,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -33,6 +34,8 @@ import codesquad.fineants.domain.oauth.support.AuthPrincipalArgumentResolver;
 import codesquad.fineants.spring.api.errors.handler.GlobalExceptionHandler;
 import codesquad.fineants.spring.api.watch_list.request.CreateWatchListRequest;
 import codesquad.fineants.spring.api.watch_list.request.CreateWatchStockRequest;
+import codesquad.fineants.spring.api.watch_list.request.DeleteWatchListsRequests;
+import codesquad.fineants.spring.api.watch_list.request.DeleteWatchStocksRequest;
 import codesquad.fineants.spring.api.watch_list.response.CreateWatchListResponse;
 import codesquad.fineants.spring.api.watch_list.response.ReadWatchListResponse;
 import codesquad.fineants.spring.api.watch_list.response.ReadWatchListsResponse;
@@ -62,9 +65,8 @@ class WatchListRestControllerTest {
 	@MockBean
 	private WatchListService watchListService;
 
-
 	@BeforeEach
-	void setUp(){
+	void setUp() {
 		mockMvc = MockMvcBuilders.standaloneSetup(watchListRestController)
 			.setControllerAdvice(globalExceptionHandler)
 			.setCustomArgumentResolvers(authPrincipalArgumentResolver)
@@ -99,8 +101,8 @@ class WatchListRestControllerTest {
 
 		// when & then
 		mockMvc.perform(post("/api/watchlists")
-			.contentType(MediaType.APPLICATION_JSON)
-			.content(body))
+				.contentType(MediaType.APPLICATION_JSON)
+				.content(body))
 			.andExpect(status().isOk())
 			.andExpect(jsonPath("code").value(equalTo(200)))
 			.andExpect(jsonPath("status").value(equalTo("OK")))
@@ -159,11 +161,10 @@ class WatchListRestControllerTest {
 		given(authPrincipalArgumentResolver.supportsParameter(any())).willReturn(true);
 		given(authPrincipalArgumentResolver.resolveArgument(any(), any(), any(), any())).willReturn(authMember);
 
-		List<ReadWatchListResponse> response = Arrays.asList(
+		List<ReadWatchListResponse> response = List.of(
 			new ReadWatchListResponse(1L, "삼성전자", "005930", 68000,
 				1200, 1.85f, 2.12f, "제조업",
 				LocalDateTime.of(2023, 12, 2, 15, 0, 0)));
-
 
 		given(watchListService.readWatchList(any(AuthMember.class), any(Long.class))).willReturn(response);
 
@@ -187,7 +188,7 @@ class WatchListRestControllerTest {
 
 	@DisplayName("사용자가 watchlist에 종목을 추가한다.")
 	@Test
-	void createWatchStock() throws Exception {
+	void createWatchStocks() throws Exception {
 		// given
 		Member member = Member.builder()
 			.id(1L)
@@ -200,12 +201,13 @@ class WatchListRestControllerTest {
 		AuthMember authMember = AuthMember.from(member);
 
 		Map<String, Object> requestBodyMap = new HashMap<>();
-		requestBodyMap.put("tickerSymbol", "005930");
+		requestBodyMap.put("tickerSymbols", List.of("005930"));
 		String body = objectMapper.writeValueAsString(requestBodyMap);
 
 		given(authPrincipalArgumentResolver.supportsParameter(any())).willReturn(true);
 		given(authPrincipalArgumentResolver.resolveArgument(any(), any(), any(), any())).willReturn(authMember);
-		doNothing().when(watchListService).createWatchStock(any(AuthMember.class), any(Long.class), any(CreateWatchStockRequest.class));
+		doNothing().when(watchListService)
+			.createWatchStocks(any(AuthMember.class), any(Long.class), any(CreateWatchStockRequest.class));
 
 		// when & then
 		mockMvc.perform(post("/api/watchlists/1/stock")
@@ -220,7 +222,7 @@ class WatchListRestControllerTest {
 
 	@DisplayName("사용자가 watchlist를 삭제한다.")
 	@Test
-	void deleteWatchList() throws Exception {
+	void deleteWatchLists() throws Exception {
 		// given
 		Member member = Member.builder()
 			.id(1L)
@@ -232,13 +234,19 @@ class WatchListRestControllerTest {
 			.build();
 		AuthMember authMember = AuthMember.from(member);
 
+		Map<String, Object> requestBodyMap = new HashMap<>();
+		List<Long> watchListIds = new ArrayList<>();
+		requestBodyMap.put("watchlistIds", watchListIds);
+		String body = objectMapper.writeValueAsString(requestBodyMap);
+
 		given(authPrincipalArgumentResolver.supportsParameter(any())).willReturn(true);
 		given(authPrincipalArgumentResolver.resolveArgument(any(), any(), any(), any())).willReturn(authMember);
-		doNothing().when(watchListService).deleteWatchList(any(AuthMember.class), any(Long.class));
+		doNothing().when(watchListService).deleteWatchLists(any(AuthMember.class), any(DeleteWatchListsRequests.class));
 
 		// when & then
-		mockMvc.perform(delete("/api/watchlists/1")
-				.contentType(MediaType.APPLICATION_JSON))
+		mockMvc.perform(delete("/api/watchlists")
+				.contentType(MediaType.APPLICATION_JSON)
+				.content(body))
 			.andExpect(status().isOk())
 			.andExpect(jsonPath("code").value(equalTo(200)))
 			.andExpect(jsonPath("status").value(equalTo("OK")))
@@ -248,7 +256,7 @@ class WatchListRestControllerTest {
 
 	@DisplayName("사용자가 watchlist에서 종목을 삭제한다.")
 	@Test
-	void deleteWatchStock() throws Exception {
+	void deleteWatchStocks() throws Exception {
 		// given
 		Member member = Member.builder()
 			.id(1L)
@@ -260,13 +268,20 @@ class WatchListRestControllerTest {
 			.build();
 		AuthMember authMember = AuthMember.from(member);
 
+		Map<String, Object> requestBodyMap = new HashMap<>();
+		requestBodyMap.put("tickerSymbols", List.of("005930"));
+		String body = objectMapper.writeValueAsString(requestBodyMap);
+
+
 		given(authPrincipalArgumentResolver.supportsParameter(any())).willReturn(true);
 		given(authPrincipalArgumentResolver.resolveArgument(any(), any(), any(), any())).willReturn(authMember);
-		doNothing().when(watchListService).deleteWatchStock(any(AuthMember.class), any(Long.class), any(Long.class));
+		doNothing().when(watchListService)
+			.deleteWatchStocks(any(AuthMember.class), any(Long.class), any(DeleteWatchStocksRequest.class));
 
 		// when & then
-		mockMvc.perform(delete("/api/watchlists/1/stock/1")
-				.contentType(MediaType.APPLICATION_JSON))
+		mockMvc.perform(delete("/api/watchlists/1/stock")
+				.contentType(MediaType.APPLICATION_JSON)
+				.content(body))
 			.andExpect(status().isOk())
 			.andExpect(jsonPath("code").value(equalTo(200)))
 			.andExpect(jsonPath("status").value(equalTo("OK")))
